--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,9 @@
 <body>	<title>About Me</title>
 My name is Breanna .. Otherwise known as Latricey , aged 17 .. I created this page to give people connections to other websites and people to make their creations come ALIVE ..... On a personal level, I used to love to draw .. Anything that comes to mind, I just get paper , a pencil, and just go ... At a young age my granny used to teach me how to draw and that's when I was inspired .. I draw here and there but not as much as I used to because I grew out of my imagination a little bit .. Ha Ha !
 
+<p>
+	Heres my <a href="https://docs.google.com/document/d/1G7FSEzvCDl9ch3EMHrr3gk4BKPDPxImKMgcO3wMWhEk/edit?usp=sharing">Resume</a>
+
 
 
 </body>
