--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@ Password : <input type="password" name="pwd">
 	</p></h3>
 	
 	<p><h3>
-	<a href="#C4">About Me</a>
+	<a href="about.html">About Me</a>
 	</p></h3>
+
+<p><h3>
+<a href="contact.html">Contact Me</a>
+</p></h3>
 </div>
 
 
