--- a/aboutme.html
+++ b/aboutme.html
@@ -7,9 +7,9 @@
 My name is Breanna .. Otherwise known as Latricey , aged 17 .. I created this page to give people connections to other websites and people to make their creations come ALIVE ..... On a personal level, I used to love to draw .. Anything that comes to mind, I just get paper , a pencil, and just go ... At a young age my granny used to teach me how to draw and that's when I was inspired .. I draw here and there but not as much as I used to because I grew out of my imagination a little bit .. Ha Ha !
 
 <p>
-	Heres my <a href="https://docs.google.com/document/d/1G7FSEzvCDl9ch3EMHrr3gk4BKPDPxImKMgcO3wMWhEk/edit?usp=sharing">Resume</a>
-
-
+<a href="http://www.flickr.com/photos/98783440@N04/9370977699/" title="breanna by breanna.lbrown, on Flickr"><img src="http://farm4.staticflickr.com/3740/9370977699_19126200d6_o.jpg" width="617" height="698" alt="breanna"></a><p>
+	</p>
+	Here's my resume
 
 </body>
 </html>
