--- a/aboutme.html
+++ b/aboutme.html
@@ -11,5 +11,21 @@ My name is Breanna .. Otherwise known as Latricey , aged 17 .. I created this pa
 	</p>
 	Here's my resume
 
+These are my art paintings and drawings that I've done in the past ..<p>
+</p>
+
+<a href="http://www.flickr.com/photos/98783440@N04/9423455843/" title="426540_612187958807374_386966921_n by breanna.lbrown, on Flickr"><img src="http://farm4.staticflickr.com/3763/9423455843_8c9a8e5863_o.jpg" width="960" height="717" alt="426540_612187958807374_386966921_n"></a>
+
+<p>
+<a href="http://www.flickr.com/photos/98783440@N04/9423463437/" title="547950_649305651762271_1116986029_n by breanna.lbrown, on Flickr"><img src="http://farm3.staticflickr.com/2839/9423463437_22c2167f33_o.jpg" width="960" height="717" alt="547950_649305651762271_1116986029_n"></a>
+</p>
+<p>
+<a href="http://www.flickr.com/photos/98783440@N04/9426234676/" title="944351_677366272289542_1445066993_n by breanna.lbrown, on Flickr"><img src="http://farm8.staticflickr.com/7452/9426234676_64c1fe4172_o.jpg" width="960" height="717" alt="944351_677366272289542_1445066993_n"></a>
+</p>
+<p>
+<a href="http://www.flickr.com/photos/98783440@N04/9426237488/" title="1010522_686375828055253_984012314_n by breanna.lbrown, on Flickr"><img src="http://farm8.staticflickr.com/7436/9426237488_fba17f91f8_o.jpg" width="960" height="717" alt="1010522_686375828055253_984012314_n"></a>
+</p>
+
+
 </body>
 </html>
